.provarCaches/00D410000011HE0EAM/objects/rstkf__glcmpdimset__c.object
<CustomObject>
    <description>glcmpdimset__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glcmpdimset_glcmp__r.rstkf__externalid__c &amp; &apos;_&apos; + rstkf__glcmpdimset_contains__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glcmpdimset_glcmp__r.Name &amp; &quot;-&quot; &amp; rstkf__glcmpdimset_contains__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmpdimset_contains__c</fullName>
        <description>Dimension Set Contents</description>
        <inlineHelpText>Dimension Set Contents</inlineHelpText>
        <label>Dimension Set Contents</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmpdimset_glcmp__c</fullName>
        <description>Financial Company</description>
        <inlineHelpText>Financial Company</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE</relationshipLabel>
        <relationshipName>glcmpdimsets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmpdimset_mask__c</fullName>
        <description>Dimension Set Numeric Mask</description>
        <inlineHelpText>Dimension Set Numeric Mask</inlineHelpText>
        <label>Z_OBSOLETE</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmpdimset_needrebuild__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Statement Object Rebuild Required</description>
        <inlineHelpText>This field indicates that the Financial Statement Rebuild for Dimension Sets process has not yet been run for this Dimension Set.</inlineHelpText>
        <label>Statement Object Rebuild Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmpdimset_text__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmpdimset_usedim1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Dimension 1 in the Set</description>
        <inlineHelpText>Include Dimension 1 in the Set</inlineHelpText>
        <label>Include Dimension 1 in the Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmpdimset_usedim2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Dimension 2 in the Set</description>
        <inlineHelpText>Include Dimension 2 in the Set</inlineHelpText>
        <label>Include Dimension 2 in the Set</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__glcmpdimset_usedim3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Dimension 3 in the Set</description>
        <inlineHelpText>Include Dimension 3 in the Set</inlineHelpText>
        <label>Include Dimension 3 in the Set</label>
        <type>Checkbox</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>